--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -7,10 +7,25 @@
   padding: 6em 0 7em;
 }
 
-.content-block-title{
+h2.content-block-title{
   text-align: center;
   font-size: 3.5rem;
   margin-bottom: .5em;
+}
+@include phone {
+  h2.content-block-title{
+    font-size: 2rem;
+  }
+}
+@include tablet {
+  h2.content-block-title{
+    font-size: 3rem;
+  }
+}
+@include laptop {
+  h2.content-block-title{
+    font-size: 3.5rem;
+  }
 }
 .content-block-hr{
   border-top: $brand-color solid;
