--- a/_sass/components/_home-header.scss
+++ b/_sass/components/_home-header.scss
@@ -10,18 +10,17 @@
 
 }
 .home-header-content{
-  padding: 0 2%;
-  font-size: 20%;
+  padding: 0 1%;
 }
 .home-header-inner{
-  padding: 2em;
+  padding: 1em;
   margin: 0 auto;
 
 }
 
 .home-header-title{
   color: $color-white;
-  font-size: 6rem;
+  font-size: 2rem;
   letter-spacing: .2em;
   margin-bottom: .1em;
   margin-left: .2em;
@@ -29,13 +28,13 @@
 }
 .home-header-subtitle{
   color: $color-white;
-  font-size: 2rem;
+  font-size: .8rem;
   letter-spacing: .2em;
   padding: 1em 0;
   border-top: .25rem solid $color-white;
   border-bottom: .25rem  solid $color-white;
   margin: 0 auto;
-  margin-bottom: 1.5em;
+  margin-bottom: 2em;
   max-width: 53rem;
 }
 
@@ -54,13 +53,40 @@
   color: $color-white;
 }
 @include phone {
-
+  .home-header-title{
+    font-size: 2rem;
+  }
+  .home-header-subtitle{
+    font-size: .8rem;
+  }
+}
+@include tablet {
+  .home-header-title{
+    font-size: 4rem;
+  }
+  .home-header-subtitle{
+    font-size: 1.3rem;
+    max-width: 35rem;
+  }
 }
 @include laptop {
   .home-banner{
     background-attachment: fixed;
   }
+  .home-header-title{
+    font-size: 5rem;
+  }
+  .home-header-subtitle{
+    font-size: 1.7rem;
+    max-width: 45rem;
+  }
 }
 @include desktop {
-
+  .home-header-title{
+    font-size: 6rem;
+  }
+  .home-header-subtitle{
+    font-size: 2rem;
+    max-width: 53rem;
+  }
 }
