Animations, Menu Changes/Fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer>
   <div class="text-center">
     <h2 class="footer-title 1">Let's be friends.</h2>
-    <hr class="content-block-hr 1">
-    <img class="me" src="/images/me.jpg" />
-    <ul class="social-links">
+    <hr class="content-block-hr 2">
+    <img class="me 3" src="/images/me.jpg" />
+    <ul class="social-links 3">
       <li><a href="//facebook.com/tgray.it">FACEBOOK</a></li>
       <li>//</li>
       <li><a href="//instagram.com/jtgry">INSTAGRAM</a></li>
