--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header id="home" class="home-header" style="background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(/images/forest.jpg);">
   <div class="home-header-content vertical">
-    <div class="home-header-inner 5">
-      <div class="home-header-header 2">
-        <h1 class="home-header-title">John T Gray</h1>
-        <h2 class="home-header-subtitle">Design | Development | Strategy</h2>
+    <div class="home-header-inner">
+      <div class="home-header-header">
+        <h1 class="home-header-title 1">John T Gray</h1>
+        <h2 class="home-header-subtitle 2">Design | Development | Strategy</h2>
       </div>
       <a href="#intro" class="button buttonAlt 3">Learn More</a>
     </div>
