--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <div class="nav-bar animated fadeIn slow4">
-  <a href="/" class=""><h1 class="navLogo">JTG</h1></a>
+  <a href="/" class=""><h1 class="nav-logo">JTG</h1></a>
   <!--<div class="nav-items">
     <ul>
       <li><a href="#intro">Intro</a></li>
