--- a/_sass/layout/mobile-menu.scss
+++ b/_sass/layout/mobile-menu.scss
@@ -21,20 +21,20 @@
 }
 .top-menu {
     top: 5px;
-    width: 2.2em;
-    height: .3em;
+    width: 39px;
+    height: 5px;
     background-color: #fff;
 }
 .mid-menu {
     top: 16px;
-    width: 2.2em;
-    height: .3em;
+    width: 39px;
+    height: 5px;
     background-color: #fff;
 }
 .bottom-menu {
     top: 27px;
-    width: 2.2em;
-    height: .3em;
+    width: 39px;
+    height: 5px;
     background-color: #fff;
 }
 .menui {
