Animations, Menu Changes/Fixes

--- a/_sass/layout/navigation.scss
+++ b/_sass/layout/navigation.scss
@@ -11,6 +11,10 @@
   background-color: $color-white;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
+.nav-solid .icon{
+  top: 32px;
+  right: 10px;
+}
 .nav-solid .menui{
   background-color: $brand-color;
 }
