--- a/_sass/layout/mobile-menu.scss
+++ b/_sass/layout/mobile-menu.scss
@@ -41,19 +41,16 @@
   background: #fafafa;
   transition: 0.6s ease;
   transition-timing-function: cubic-bezier(.75, 0, .29, 1.01);
-  margin-top: 22px;
+
   position: absolute;
 }
 .icon {
   position: absolute;
   display: block;
-  height: 70px;
-  width: 25px;
   margin: 0px;
-  padding: 2em;
-  margin-top: .6em;
-  top: 0;
-  right: 10px;
+  padding: 40px;
+  top: 40px;
+  right: 25px;
   background-image: none;
 }
 .iconDark {
