--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,7 +19,7 @@ html{
  */
 body {
     font-weight: $base-font-weight;
-    font-family: $base-font-size;
+    font-size: $base-font-size;
     line-height: $base-line-height;
     font-family: $base-font-family;
     color: $color-black;
