--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,12 +1,30 @@
-<section id="contact" class="block-banner" class="block-banner" style="background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(/images/johntgray.jpg);">
-  <div class="block-banner">
-    <div class="vertical">
-      <h2 class="block-banner-header">Contact</h2>
-      <hr class="block-banner-hr" />
-      <p class="block-banner-text">Ready to start your project or just a friendly chat?</p>
-      <div class="container">
-        <a class="button button-alt typeform-share link" href="https://tgray089.typeform.com/to/yLMMKM" data-mode="1" target="_blank">Let's talk</a>
-        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
-    </div>
+<section id="contact" class="block-feature">
+  <div class="block-text">
+    <h2 class="block-feature-title">Contact</h2>
+    <hr />
+    <div class="container">
+      <form method="post" action="/thanks/">
+        <div class="form-group">
+          <label class="control-label">First Name</label>
+          <input type="text" class="form-control" name="firstName" id="firstName" />
+        </div>
+        <div class="form-group">
+          <label class="control-label">Last Name</label>
+          <input type="text" class="form-control" name="lastName" id="lastName" />
+        </div>
+        <div class="form-group">
+          <label class="control-label">Email</label>
+          <input type="text" class="form-control" name="email" id="email" />
+        </div>
+        <div class="form-group">
+          <label class="control-label">Message</label>
+          <textarea class="form-control" name="message"></textarea>
+        </div>
+        <input type="hidden" name="_to" value="tgray.it@gmail.com">
+
+        <input type="text" name="_gotcha" style="display: none;">
+        <input class="button" type="submit" value="send">
+      </div>
+    </form>
   </div>
 </section>
