--- a/css/main.scss
+++ b/css/main.scss
@@ -20,6 +20,7 @@ $color-black:      rgba(30,30,30,0.9);
 $color-white:      rgba(255,255,255,0.95);
 $color-off-white:  rgba(252,252,252,0.9);
 $color-brand:      rgba(15,60,91, 1);
+$color-alt:        rgba(15,60,91, 1);
 $color-transparent:rgba(0,0,0,0);
 $color-grey:       rgba(200,200,200,0.9);
 $color-grey-light: lighten($color-grey, 10%);
