--- a/src/sass/nav.scss
+++ b/src/sass/nav.scss
@@ -140,8 +140,9 @@ a.nav-button {
   height: 100vh;
 }
 .mobile-nav-items a{
-  font-weight: 800;
+  font-weight: 700;
   font-family: $alt-font-family;
+  font-size: .9rem;
   letter-spacing: .1em;
   display: block;
   padding: 2em 0;
@@ -156,42 +157,11 @@ a.nav-button {
   -o-transition: color .3s linear; /* Opera 10.5 */
   transition: color .3s linear;
 }
-.quick-links{
-  width: 100%;
-  height: 2em;
-  position: absolute;
-  line-height: 0;
-  margin-top: .1rem;
-  text-transform: uppercase;
-  background: $color-brand;
-  display: table;
-  z-index: 1800;
-}
-.quick-links ul{
-  float: right;
-  margin: 0;
-  @media (max-width: $tablet) {
-    text-align: center;
-    float: none;
-  }
-}
-.quick-links li{
-  display: inline-block;
-  margin: 0;
-}
-.quick-links a{
-  font-family: $header-font-family;
+
+.mobile-nav-items a.nav-calltoaction{
   color: $color-white;
-  text-transform: uppercase;
-  padding: $spacing-unit / 6;
-  font-size: .5rem;
-  font-weight: 800;
-  letter-spacing: .2em;
-}
-img.search-icon{
-  margin-right: 0;
-  margin-top: -.2em;
-  display: inline-block;
-  height: 1.5em;
-  width: auto;
+  background: $color-brand;
+  &:hover {
+    color: $color-white;
+  }
 }
