--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -22,7 +22,7 @@ body {
     line-height: $base-line-height;
     font-family: $base-font-family;
     color: $color-black;
-    background-color: $color-off-white;
+    background-color: $color-white;
     z-index: 1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
