--- a/src/sass/blocks.scss
+++ b/src/sass/blocks.scss
@@ -9,7 +9,7 @@
   min-height: 50vw;
   max-height: 50vw;
   height: 50vw;
-  background: $color-off-white;
+  background: $color-white;
   background-repeat: no-repeat;
   background-position: center center;
   text-align: center;
@@ -32,7 +32,7 @@
   min-height: 50vw;
   max-height: 50vw;
   height: 50vw;
-  background: $color-off-white;
+  background: $color-white;
   background-repeat: no-repeat;
   background-position: center center;
   text-align: center;
@@ -61,7 +61,8 @@
   width: 100%;
   text-align: center;
   margin: 0 auto;
-  background: $color-off-white;
+  padding: $spacing-unit 0;
+  background: $color-white;
   background-repeat: no-repeat;
   background-position: center center;
   text-align: center;
@@ -99,7 +100,33 @@ h2.block-feature-title{
       font-size: 1.4rem;
     }
   }
+  img {
+    max-width: 60%;
+    border-radius: 10px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
+    margin: $spacing-unit / 2 0;
+    @media (max-width: $tablet) {
+      max-width: 90%;
+    }
+    @media (max-width: $phone) {
+      max-width: 90%;
+    }
+  }
 
+
+}
+.block-feature-image{
+  width: 120%;
+  margin-left: -10%;
+  margin-bottom: $spacing-unit;
+  text-align: center;
+  background: $color-off-white;
+  padding: $spacing-unit 0;
+  @media (max-width: $laptop) {
+    width: 100%;
+    margin: 0;
+  }
 }
 .block-features{
   display: table;
@@ -204,72 +231,4 @@ h2.block-feature-title{
 }
 .block-title{
   margin-bottom: 0;
-}
-
-.block-news{
-  width: 100%;
-  height: 30vh;
-  .block-news-item{
-    display: table;
-    min-height: 30vh;
-    max-height: 30vh;
-    height: 30vh;
-    overflow-y: hidden;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    @include span(1/6);
-    @media (max-width: $tablet){
-      @include span(1/3, $cycle: 3);
-    }
-    @media (max-width: $phone){
-      @include span(1/2, $cycle: 2);
-    }
-    .block-news-item-overlay{
-      display: table;
-      min-height: 30vh;
-      max-height: 30vh;
-      height: 30vh;
-      width: 100%;
-      overflow-y: hidden;
-      background-repeat: no-repeat;
-      background-position: center center;
-      background-attachment: scroll;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-    }
-    a{
-      color: $color-white;
-    }
-    h4{
-      font-size: .8rem;
-      color: $color-white;
-      margin: 0;
-      padding-bottom: $spacing-unit / 2;
-      @media (max-width: $tablet) {
-        font-size: .6rem;
-      }
-    }
-    .block-news-item-content{
-      padding: 1em;
-
-    }
-    .block-news-item-date{
-      height: 4em;
-      width: 4em;
-      padding: 1em;
-      margin-left: auto;
-      color: $color-white;
-      text-transform: uppercase;
-      font-size: .7rem;
-      font-weight: 600;
-      text-align: center;
-    }
-  }
 }
