--- a/src/sass/forms.scss
+++ b/src/sass/forms.scss
@@ -1,5 +1,10 @@
 form{
   display: block;
+  margin: $spacing-unit 0;
+  button{
+    width: 100%;
+    margin-right: 0;
+  }
 }
 input, select, textarea{
   -webkit-tap-highlight-color: rgba(0,0,0,0);
@@ -8,15 +13,16 @@ input, select, textarea{
 }
 label.form-label {
   font-family: $header-font-family;
-  font-size: 120%;
+  font-weight: 500;
+  font-size: 1.4rem;
   float: left;
 }
 input.form-control {
   font-family: $base-font-family;
   text-align: left;
-  margin-bottom: $spacing-unit /2;
-  height:1.6em;
-  font-size: 140%;
+  margin-bottom: $spacing-unit / 2;
+  height: 2em;
+  font-size: 2rem;
   width:100%;
   background:transparent;
   border:none;
@@ -55,14 +61,10 @@ textarea.form-control{
   webkit-box-shadow: none;
   box-shadow: none;
   transition: all .2s ease-in-out;
-
+  padding: 0;
 }
 input.field:focus {
   border:none;
-}
-input.button{
-  width: 100%;
-  margin: 0;
 }
 
 input[type="email"]:focus,input[type="number"]:focus,input[type="search"]:focus,input[type="text"]:focus,input[type="tel"]:focus,input[type="url"]:focus,input[type="password"]:focus,textarea:focus,select:focus {
@@ -90,36 +92,7 @@ textarea.form-control:active {
     box-shadow: none;
     border: 2px solid rgba(0,0,0,0.2);
 }
-.has-feedback .form-control-feedback {
-    position: absolute;
-    top: 35px;
-    right: 10px;
-    display: block;
-    width: 34px;
-    height: 34px;
-    line-height: 34px;
-    text-align: center;
-}
-.has-success .form-control {
-    border-bottom: 1px solid #3c763d;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-.has-success .form-control:focus {
-    border-bottom: 1px solid #3c763d;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-.has-error .form-control {
-    border-bottom: 1px solid #a94442;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-.has-error .form-control:focus {
-    border-bottom: 1px solid #a94442;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
+
 input[type=checkbox],input[type=radio] {
   -webkit-appearance: none;
   -moz-appearance: none;
