--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -19,18 +19,19 @@
   );
   @media (max-width: $tablet) {
     background-attachment: scroll;
+    margin-bottom: 0;
   }
 
 }
 .home-header-overlay {
-  background-color: $color-off-white;
+  background-color: $color-white;
   opacity: .95;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 0;
-  padding-bottom: 90vh;
+  padding-bottom: 91vh;
   @media (max-width: $tablet) {
     width: 100%;
     height: 100%;
