--- a/layouts/block/block-feature.html
+++ b/layouts/block/block-feature.html
@@ -1,4 +1,4 @@
-<section class="block-section">
+<section class="block-section" id="{{ .Title }}">
   <div class="block-features {{ if isset .Params "alignment" }}{{ index .Params "alignment" }}{{ end }}">
     {{ range first 4 (where .Site.Pages "Params.featured" true) }}
       <a class="block-small" style="background-image: url(images-resized/small/{{ .Params.image }});" href="{{ .URL }}">
@@ -17,7 +17,7 @@
           <hr />
           <h2 class="block-title">{{ .Title }}</h2>
           {{ .Content }}
-          <button class="button draw" href="{{ .Params.button }}">Learn More <i class="fal fa-long-arrow-right fa-1x"></i></button>
+          <a class="button draw" href="{{ .Params.button }}">Learn More</a>
       </div>
       </div>
   </div>
