--- a/layouts/block/block-image.html
+++ b/layouts/block/block-image.html
@@ -1,4 +1,4 @@
-<section class="block-section">
+<section class="block-section" id="{{ .Title }}">
   <div class="block-image {{ if isset .Params "alignment" }}{{ index .Params "alignment" }}{{ end }}">
     <div class="vertical">
       <div class="container">
