--- a/layouts/partials/site/header.html
+++ b/layouts/partials/site/header.html
@@ -3,7 +3,7 @@
   <div class="header-content">
       <div class="vertical">
         <img class="header-badge" src="images/logoblue.svg"></img>
-        <button href="" class="button draw header-button">Learn More</button>
+        <a href="{{ .Params.button }}" class="button draw header-button">Learn More</a>
       </div>
     </div>
   </div>
