--- a/layouts/block/block-feature-image.html
+++ b/layouts/block/block-feature-image.html
@@ -1,13 +1,16 @@
-<section class="block-feature-image">
-  <h2 class="block-feature-title">{{ .Title }}</h2>
+<section class="block-feature-image" id="{{ .Title }}">
+  <div class="container">
+    <h2 class="block-feature-title">{{ .Title }}</h2>
+  </div>
   <hr class="hr-space" />
     <div class="block-feature-text">
       <img class="image" src="{{ .Params.Image }}">
       <div class="container">
-        <p>{{ .Content }}</p>
+        {{ .Content }}
+        {{ if isset .Params "website" }}
+          <a href="{{ .Params.website }}" class="button draw">Visit Website</a>
+        {{ end }}
       </div>
-      {{ if isset .Params "website" }}
-        <a href="{{ .Params.website }}" class="button draw">Visit Website</a>
-      {{ end }}
+
     </div>
 </section>
