--- a/layouts/block/block-feature-text.html
+++ b/layouts/block/block-feature-text.html
@@ -1,10 +1,10 @@
-<section class="block-feature" style="background-image: url({{ .Params.background }});">
+<section class="block-feature" id="{{ .Title }}" style="background-image: url({{ .Params.background }});">
   <h2 class="block-feature-title">{{ .Title }}</h2>
   <hr class="hr-space" />
     <div class="container-wide">
       <div class="block-feature-text">
         <p>{{ .Content }}</p>
-        <button class="button draw" href="{{ .Params.button }}">Learn More</button>
+        <a class="button draw" href="{{ .Params.button }}">Learn More</a>
       </div>
     </div>
   </div>
